Reestruturação do Banco: Event Virada do Ano, Inserção de Pessoas, Status para Alunos e Padronização de Cargos e Funções
